Update AI Study Planner